--- a/app/templates/stocks/oslo_dedicated.html
+++ b/app/templates/stocks/oslo_dedicated.html
@@ -37,7 +37,7 @@
                     <p class="lead text-muted mb-0">Norges ledende børs - sanntidskurser og analyser</p>
                 </div>
                 <div class="d-flex gap-2">
-                    <a href="{{ url_for('stocks.global_list') }}" class="btn btn-outline-success">
+                    <a href="{{ url_for('stocks.list_global') }}" class="btn btn-outline-success">
                         <i class="bi bi-globe me-1"></i>Globale aksjer
                     </a>
                     <a href="{{ url_for('stocks.list_crypto') }}" class="btn btn-outline-warning">
