--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,9 @@
     <link href="{{ url_for('static', filename='css/contrast-fixes.css') }}?v=20250824" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/text-contrast.css') }}?v=20250824" rel="stylesheet">
     
+    <!-- Navigation fixes - comprehensive styling for all navigation elements -->
+    <link href="{{ url_for('static', filename='css/navigation-fixes.css') }}?v=20250826" rel="stylesheet">
+    
     <!-- Simple navbar styling -->
     <style>
     /* CACHE BUSTING - Version 20250822_v2 */
