--- a/app/templates/watchlist/index.html
+++ b/app/templates/watchlist/index.html
@@ -18,7 +18,7 @@
                     <button type="button" class="btn btn-outline-primary" onclick="generateWeeklyReport()">
                         <i class="bi bi-file-earmark-text"></i> Ukentlig Rapport
                     </button>
-                    <button type="button" class="btn btn-outline-info" href="/watchlist/settings">
+                    <button type="button" class="btn btn-outline-info" onclick="window.location.href='/watchlist/settings'">
                         <i class="bi bi-gear"></i> Innstillinger
                     </button>
                 </div>
